--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,8 +2,8 @@ site_name: Potatocs Community Edition
 
 theme:
     name: readthedocs
-    nav_style: dark
+    # nav_style: dark
 
 nav:
-  - What is Potatcs?: index.md
-  - Getting started: install.md
+    - What is Potatcs?: index.md
+    # - Getting started: install.md
