--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,3 +7,5 @@ theme:
 nav:
     - What is Potatcs?: index.md
     - Getting started: install.md
+    - What is Potatcs?: index.md
+    - Getting started: install.md
